[gd_scene load_steps=2 format=3 uid="uid://cykfcolxs285w"]

[ext_resource type="Script" path="res://ui/OptionsMenu/options_menu.gd" id="1_y0j2m"]

[node name="options_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_y0j2m")

[node name="Panel" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.243137, 0.243137, 0.243137, 1)

[node name="MenuTopBar" type="ColorRect" parent="."]
anchor_right = 1.0
offset_bottom = 44.0
grow_horizontal = 2
color = Color(0, 0, 0, 0.419608)
metadata/_edit_layout_mode = 1

[node name="Label" type="Label" parent="MenuTopBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -13.0
offset_right = 55.0
offset_bottom = 13.0
grow_horizontal = 2
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_layout_mode = 1

[node name="Button" type="Button" parent="MenuTopBar"]
anchor_bottom = 1.0
offset_right = 61.0
grow_vertical = 2
text = "<-"
metadata/_edit_layout_mode = 1

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 64.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_layout_mode = 1

[node name="Sections" type="VBoxContainer" parent="HSplitContainer"]
offset_right = 198.0
offset_bottom = 536.0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25
alignment = 1

[node name="GeneralButton" type="Button" parent="HSplitContainer/Sections"]
custom_minimum_size = Vector2(100, 100)
offset_top = 114.0
offset_right = 198.0
offset_bottom = 214.0
grow_horizontal = 2
grow_vertical = 2
text = "General"
text_overrun_behavior = 1
metadata/_edit_layout_mode = 1

[node name="VideoButton" type="Button" parent="HSplitContainer/Sections"]
custom_minimum_size = Vector2(100, 100)
offset_top = 218.0
offset_right = 198.0
offset_bottom = 318.0
grow_horizontal = 2
grow_vertical = 2
text = "Video"
metadata/_edit_layout_mode = 1

[node name="ControlsButton" type="Button" parent="HSplitContainer/Sections"]
custom_minimum_size = Vector2(100, 100)
offset_top = 322.0
offset_right = 198.0
offset_bottom = 422.0
grow_horizontal = 2
grow_vertical = 2
text = "Controls"
metadata/_edit_layout_mode = 1

[node name="Tabs" type="TabContainer" parent="HSplitContainer"]
custom_minimum_size = Vector2(600, 0)
offset_left = 210.0
offset_right = 1024.0
offset_bottom = 536.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 3
tab_alignment = 1
tabs_visible = false
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = true

[node name="General" type="Control" parent="HSplitContainer/Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/Tabs/General"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -248.0
offset_top = -183.5
offset_right = 248.0
offset_bottom = 183.5
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_layout_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/Tabs/General/VBoxContainer"]
offset_right = 496.0
offset_bottom = 26.0
grow_horizontal = 2
metadata/_edit_layout_mode = 1

[node name="Label" type="Label" parent="HSplitContainer/Tabs/General/VBoxContainer/HBoxContainer"]
offset_right = 104.0
offset_bottom = 26.0
size_flags_vertical = 5
text = "Player Name:"

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer/Tabs/General/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 25)
offset_left = 108.0
offset_right = 158.0
offset_bottom = 26.0

[node name="TextEdit" type="TextEdit" parent="HSplitContainer/Tabs/General/VBoxContainer/HBoxContainer"]
offset_left = 162.0
offset_right = 496.0
offset_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 5
caret_blink = true

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer/Tabs/General/VBoxContainer"]
custom_minimum_size = Vector2(25, 25)
offset_top = 30.0
offset_right = 496.0
offset_bottom = 55.0

[node name="HBoxContainer2" type="HBoxContainer" parent="HSplitContainer/Tabs/General/VBoxContainer"]
offset_top = 59.0
offset_right = 496.0
offset_bottom = 85.0
grow_horizontal = 2
metadata/_edit_layout_mode = 1

[node name="Label" type="Label" parent="HSplitContainer/Tabs/General/VBoxContainer/HBoxContainer2"]
offset_right = 40.0
offset_bottom = 26.0
size_flags_vertical = 5
text = "FOV: "

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer/Tabs/General/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(50, 25)
offset_left = 44.0
offset_right = 94.0
offset_bottom = 26.0

[node name="TextEdit" type="HSlider" parent="HSplitContainer/Tabs/General/VBoxContainer/HBoxContainer2"]
offset_left = 98.0
offset_right = 496.0
offset_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 5

[node name="Video" type="Control" parent="HSplitContainer/Tabs"]
visible = false
offset_right = 40.0
offset_bottom = 40.0

[node name="Toggle" type="CheckButton" parent="HSplitContainer/Tabs/Video"]
offset_right = 680.0
offset_bottom = 534.0
size_flags_horizontal = 3
text = "Fullscreen:"

[node name="Controls" type="Control" parent="HSplitContainer/Tabs"]
visible = false
offset_right = 40.0
offset_bottom = 40.0
